rl_assortment_pkg/force-app/main/default/objects/RL_Size_Run__c/RL_Size_Run__c.object-meta.xml
<CustomObject>
    <description>Unit breakdown by size for each assortment line item. Child of RL_Assortment_Line__c. Synced from Anaplan size break data.</description>
    <label>Size Run</label>
    <nameField>
        <label>Size Run Name</label>
        <type>AutoNumber</type>
        <displayFormat>SR-{0000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Size Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>