rl_assortment_pkg/force-app/main/default/objects/RL_Size_Run__c/fields/Anaplan_Size_ID__c.field-meta.xml
<CustomField>
    <fullName>Anaplan_Size_ID__c</fullName>
    <description>External key for Anaplan size break upsert</description>
    <label>Anaplan Size ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>