rl_assortment_pkg/force-app/main/default/objects/RL_Size_Run__c/fields/Assortment_Line__c.field-meta.xml
<CustomField>
    <fullName>Assortment_Line__c</fullName>
    <description>Parent assortment line item (master-detail)</description>
    <label>Assortment Line Item</label>
    <referenceTo>RL_Assortment_Line__c</referenceTo><relationshipLabel>Assortment Line Item</relationshipLabel><relationshipName>SizeRuns</relationshipName><writeRequiresMasterRead>false</writeRequiresMasterRead>
    <type>MasterDetail</type>
</CustomField>