rl_assortment_pkg/force-app/main/default/objects/RL_Size_Run__c/fields/Is_Core_Size__c.field-meta.xml
<CustomField>
    <fullName>Is_Core_Size__c</fullName>
    <description>Core size highlighted in the data wedge size grid</description>
    <label>Core Size</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>