rl_assortment_pkg/force-app/main/default/objects/RL_Size_Run__c/fields/Planned_Units__c.field-meta.xml
<CustomField>
    <fullName>Planned_Units__c</fullName>
    <description>Planned units allocated to this size</description>
    <label>Planned Units</label>
    <precision>18</precision><scale>0</scale>
    <type>Number</type>
</CustomField>