rl_assortment_pkg/force-app/main/default/objects/RL_Size_Run__c/fields/Size_Code__c.field-meta.xml
<CustomField>
    <fullName>Size_Code__c</fullName>
    <description>Size identifier e.g. XS S M L XL XXL 28 30 32 34 36</description>
    <label>Size Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>