rl_assortment_pkg/force-app/main/default/objects/RL_Size_Run__c/fields/Size_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Size_Sort_Order__c</fullName>
    <description>Display order of sizes in the size run grid (1=first)</description>
    <label>Sort Order</label>
    <precision>18</precision><scale>0</scale>
    <type>Number</type>
</CustomField>